[package]
name = "bitbucket-server-cli"
version = "0.1.1"
edition = "2021"

[lib]
name = "bitbucket_server_cli"
path = "src/mod.rs"

[[bin]]
name = "bitbucket-server-cli"
path = "bin/main.rs"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
clap_derive = "4.5.28"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
env_logger = "0.11.6"
bitbucket-server-rs = "0.3.2"

[dev-dependencies]
mockito = "1.4.0"
